# Twin-ai-Bot

twin/: dummy.txt
twin/backend/: me.txt  pyproject.toml  requirements.txt  server.py
twin/backend/data/: facts.json  summary.txt
twin/frontend/components/: twin.tsx
twin/memory/: 31c3bcdd-7012-4c78-9f27-a9e0a37083dd.json  3fbd1a71-a88c-4afb-a8d0-6d943eed8e9b.json
