[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.58",
    "fastapi>=0.133.1",
    "groq>=1.0.0",
    "mangum>=0.21.0",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pypdf>=6.7.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
